# chip-8-rs

./: .gitignore  Cargo.toml  README.md  build.sh
roms/: splash-screen.ch8
splash-screen/: splash-screen.8o
src/: app.rs  debugger.rs  emulator.rs  handlers.rs  keys.rs  lib.rs  runner.rs  ui.rs
web/: index.css  index.html  index.js
